# ai201-p1-unofficial-guide

./: README.md  app.py  config.py  embed.py  ingest.py  models.py  planning.md  pyproject.toml  retrieval.py
docs/: aaron_kyei-asare_grades.json  aaron_kyei-asare_reviews.json  anna_evtushenko_reviews.json  anwar_mamat_grades.json  anwar_mamat_reviews.json  aravind_srinivasan_grades.json  aravind_srinivasan_reviews.json  christopher_kauffman_grades.json  christopher_kauffman_reviews.json  cliff_bakalian_grades.json  cliff_bakalian_reviews.json  clyde_kruskal_grades.json  clyde_kruskal_reviews.json  daniel_abadi_grades.json  daniel_abadi_reviews.json  dave_levin_grades.json  dave_levin_reviews.json  david_van_horn_grades.json  david_van_horn_reviews.json  elias_gonzalez_grades.json  elias_gonzalez_reviews.json  evan_golub_grades.json  evan_golub_reviews.json  herve_franceschi_grades.json  herve_franceschi_reviews.json  ilchul_yoon_grades.json  ilchul_yoon_reviews.json  james_purtilo_grades.json  james_purtilo_reviews.json  jennifer_manly_grades.json  jennifer_manly_reviews.json  john_aloimonos_grades.json  john_aloimonos_reviews.json  justin_wyss-gallifent_grades.json  justin_wyss-gallifent_reviews.json  larry_herman_grades.json  larry_herman_reviews.json  laxman_dhulipala_grades.json  laxman_dhulipala_reviews.json  leonidas_lampropoulos_grades.json  (+30 more)
